@@ -11,6 +11,10 @@ NOTE: This is a major release.  You should expect that some targets may rebuild 
 Significant changes in some python action signatures. Also switching between PY 2 and PY 3.5, 3.6
 may cause rebuilds.  In no case should rebuilds not happen.
 
+  From Ibrahim Esmat:
+    - Added the capability to build Windows Store Compatible libraries that can be used
+      with Universal Windows Platform (UWP) Apps and published to the store
+
   From Richard West:
     - Added nested / namespace tool support
     - Added a small fix to the python3 tool loader when loading a tool as a package
